--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -2,15 +2,19 @@ h1 {
   margin-left: 10px;
 }
 
-.contactForm {
+h2 {
   margin-left: 10px;
+}
+
+.contactForm {
+  margin-left: 5px;
 }
 
 .contactFormForm {
   display: flex;
   flex-direction: column;
   align-items: baseline;
-  margin-left: 30px;
+  margin-left: 20px;
   max-width: 400px;
   border: solid 1px black;
 }
@@ -29,4 +33,21 @@ button {
   background-color: white;
   border-radius: 5px;
   box-shadow: none;
+}
+
+.contactFormSearch {
+  margin-left: 5px;
+}
+
+.contactFormSearchLabel {
+  font-size: 22px;
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  margin: 20px 20px;
+  gap: 5px;
+}
+
+.contactFormInput {
+  max-width: 150px;
 }
